Fixed gaps and borders.

--- a/styles.css
+++ b/styles.css
@@ -98,8 +98,10 @@ body {
 
 main { border-right: 1px solid black; }
 header { border-bottom: 1px solid black; }
-footer {border-bottom: none}
+footer {border-bottom: none; border-top: 1px solid black;;}
 section { border-top: 1px solid black; border-right: none;}
+.carousel-dots { border-top: 1px solid black; }
+
 
 header{
   grid-column: 1 / span 2;  /* Header and footer span both columns */
@@ -395,6 +397,7 @@ section {
   display: flex;
   transition: transform 0.5s ease;
   will-change: transform;     /* smoother animations */
+  gap: 1px;
 }
 
 .carousel-slot {
